--- a/dialogabout.ui
+++ b/dialogabout.ui
@@ -41,13 +41,12 @@
    <property name="plainText">
     <string>
 
-               CANAL view 1.0.0 32bit version
+               CANAL view 1.0.7rc2 32bit version
 
                licensed under GPL 3.0 license
                ©RUSOKU Technologies Ltd
                e-mail: info@rusoku.com
-               web: www.rusoku.com
-  </string>
+               web: www.rusoku.com</string>
    </property>
   </widget>
  </widget>
