--- a/dialoginitstring.ui
+++ b/dialoginitstring.ui
@@ -39,7 +39,7 @@
     <string>
 	Init string parameters:
 	
-	        1                  2                           4         5         6         7      8
+	        1                  2                           3         4         5         6      7
 	device_type ; device_serial_number ; speed ; tseg1 ; tseg2 ;  sjw ; brp
 
 	where:
@@ -56,11 +56,11 @@
 	For example init string will looks like &quot;0; 12345678; 1000&quot;
 
 	For non standard CAN bus speeds: &quot;speed&quot; parameter must be == &quot;0&quot;
-	For example 1000 Mbit speed init string will looks like: &quot;0;12345678;0;7;2;2;5&quot;
+	For example 1000 kbit speed init string will looks like: &quot;0;12345678;0;7;2;2;5&quot;
 	   where: tseg1 = 7, tseg2 = 2, sjw = 2, brp = 5
-	CAN interface clock is : 100MHz
+	CAN interface clock is : 50MHz
  
-	CAN bus parameters calculator: http://www.bittiming.can-wiki.info/
+	CAN bus parameters calculator: http://www.bittiming.can-wiki.info
 </string>
    </property>
   </widget>
