--- a/dialogabout.ui
+++ b/dialogabout.ui
@@ -41,7 +41,7 @@
    <property name="plainText">
     <string>
 
-               CANAL view 1.0.7rc2 32bit version
+               CANAL view 1.0.8 64bit version
 
                licensed under GPL 3.0 license
                ©RUSOKU Technologies Ltd
